tests/invalid/no_systems.esm
{
  "esm": "0.1.0",
  "metadata": {
    "name": "InvalidNoSystems",
    "description": "ESM document declaring no subsystem of any kind: neither models, reaction_systems, nor data_loaders (and not a grid_discretization_descriptor). It therefore fails the top-level anyOf. RFC pure-io-data-loaders 4.4 added the data_loaders-only branch, so a bare data_loaders block is now VALID; this negative deliberately carries none of the four branches.",
    "authors": [
      "Test Suite"
    ],
    "license": "MIT",
    "created": "2026-02-19T00:00:00Z",
    "modified": "2026-02-19T00:00:00Z"
  }
}
